--- a/404.html
+++ b/404.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>The HTML5 Herald</title>
-  <link rel="stylesheet" href="/assets/css/404.scss">
+  <title>404: Uh oh!</title>
+  <link rel="stylesheet" href="assets/css/404.scss">
 </head>
 <body>
 <div class="background-img">
