--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>404: Uh oh!</title>
-  <link rel="stylesheet" href="assets/css/404.scss">
+  <link rel="stylesheet" type="text/css" href="assets/css/404.scss">
 </head>
 <body>
 <div class="background-img">
