--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="assets/css/404.scss">
 </head>
 <body>
+  <p>testing</p>
 <div class="background-img">
   <div class="space"></div>
   <div class="wrapper">
