--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>404: Uh oh!</title>
   <link rel="stylesheet" type="text/css" href="404.scss">
+  <link rel="stylesheet" type="text/css" href="404.css">
 </head>
 <body>
   <p>testing</p>
