--- a/404.html
+++ b/404.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <p>testing</p>
+  <img src="assets/img/rm_404.png">
 <div class="background-img">
   <div class="space"></div>
   <div class="wrapper">
