--- a/404.html
+++ b/404.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <title>404: Uh oh!</title>
   <link rel="stylesheet" type="text/css" href="404.scss">
+  <link rel="stylesheet" type="text/css" href="404.css">
 </head>
 <body>
   <p>testing</p>
-  <img src="assets/img/rm_404.png">
+  <img src="404.png">
 <div class="background-img">
   <div class="space"></div>
   <div class="wrapper">
