--- a/404.html
+++ b/404.html
@@ -3,16 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>404: Uh oh!</title>
-  <link rel="stylesheet" type="text/xcss" href="404.scss">
+  <link rel="stylesheet" type="text/css" href="404.css">
 </head>
 <body>
-  <p>testing</p>
-  <img src="404.png">
 <div class="background-img">
   <div class="space"></div>
   <div class="wrapper">
     <div class="img-wrapper">
-      <span>44</span>
+      <span class="error">44</span>
     </div>
     <p>The page you are trying to search has been <br> moved to another universe.</p>
     <button type="button">GET ME HOME</button>
