--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
   <div class="space"></div>
   <div class="wrapper">
     <div class="img-wrapper">
-      <span class="error">44</span>
+      <span>44</span>
     </div>
     <p>The page you are trying to search has been <br> moved to another universe.</p>
     <button type="button">GET ME HOME</button>
