--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
       <span>44</span>
     </div>
     <p>The page you are trying to search has been <br> moved to another universe.</p>
-    <button type="button">GET ME HOME</button>
+    <a href="https://fontora.dev/"><button type="button">GET ME HOME</button></a>
   </div>
 </div>
 </body>
