--- a/404.html
+++ b/404.html
@@ -15,6 +15,7 @@
     <p>The page you are trying to search has been <br> moved to another universe.</p>
     <a href="https://fontora.dev/"><button type="button">GET ME HOME</button></a>
   </div>
+  <a href="https://codepen.io/hkmtqffr/pen/dVPewm">404 page</a>.
 </div>
 </body>
 </html>
