--- a/404.html
+++ b/404.html
@@ -14,8 +14,10 @@
     </div>
     <p>The page you are trying to search has been <br> moved to another universe.</p>
     <a href="https://fontora.dev/"><button type="button">GET ME HOME</button></a>
+    <div>
+      <a href="https://codepen.io/hkmtqffr/pen/dVPewm" class="origin">404 page</a>
+    </div>
   </div>
-  <a href="https://codepen.io/hkmtqffr/pen/dVPewm">404 page</a>.
 </div>
 </body>
 </html>
