--- a/index.html
+++ b/index.html
@@ -16,12 +16,21 @@ title: Home
   {% if forloop.last %}</ul>{% endif %}
 {% endfor %}
 
+
+<h1>Latest Posts 3</h1>
+{% for post in site.posts limit:5 %}
+<ul>
+  <li>{{ post.date | date: "%Y %b %d" }} - <a href="{{ post.url }}">{{ post.title }}</a></li>
+</ul>
+{% endfor %}
+
+
 <h1>Latest v2</h1>
 {% assign postsByYear = site.posts | group_by_exp:"post", "post.date | date: '%Y'" %}
 {% for year in postsByYear limit:5 %}
 <ul>
   {% for post in year.items %}
-    <li>{{ post.date | date: "%Y.%m.%d" }} - <a href="{{ post.url }}">{{ post.title }}</a></li>
+    <li>{{ post.date | date: "%Y %b %d" }} - <a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
 {% endfor %}
