--- a/index.html
+++ b/index.html
@@ -5,34 +5,7 @@ title: Home
 
 <h1>Latest Posts</h1>
 {% for post in site.posts limit:5 %}
-  {% assign currentdate = post.date | date: "%Y" %}
-  {% if currentdate != date %}
-    {% unless forloop.first %}</ul>{% endunless %}
-    <h2 id="y{{post.date | date: "%Y"}}">{{ currentdate }}</h2>
-    <ul>
-    {% assign date = currentdate %}
-  {% endif %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-  {% if forloop.last %}</ul>{% endif %}
-{% endfor %}
-
-
-<h1>Latest Posts 3</h1>
-<ul>
-  {% for post in site.posts limit:5 %}
-  <li>{{ post.date | date: "%Y %b %d" }} - <a href="{{ post.url }}">{{ post.title }}</a></li>
-  {% endfor %}
-</ul>
-
-
-<h1>Latest v2</h1>
-{% assign postsByYear = site.posts | group_by_exp:"post", "post.date | date: '%Y'" %}
-{% for year in postsByYear limit:5 %}
-<ul>
-  {% for post in year.items %}
-    <li>{{ post.date | date: "%Y %b %d" }} - <a href="{{ post.url }}">{{ post.title }}</a></li>
-  {% endfor %}
-</ul>
+<i class="fa-solid fa-circle-right fa-xl"></i>{{ post.date | date: "%Y %b %d" }} - <a href="{{ post.url }}">{{ post.title }}</a>
 {% endfor %}
 
 <hr>
