--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@ title: Home
 ---
 
 <h1>Latest Posts</h1>
-{% for post in site.posts limit:5 %}
-<i class="fa-solid fa-circle-right fa-xl"></i>{{ post.date | date: "%Y %b %d" }} - <a href="{{ post.url }}">{{ post.title }}</a>
-{% endfor %}
+<ul class="fa-ul">
+  {% for post in site.posts limit:5 %}
+  <li><span class="fa-li"><i class="fa-solid fa-circle-right fa-xl"></i></span>{{ post.date | date: "%Y %b %d" }} - <a href="{{ post.url }}">{{ post.title }}</a></li>
+  {% endfor %}
+</ul>
 
 <hr>
 
